syntax = "proto3";

package chat;

service ChatService {
  rpc SendNotification (SendNotificationRequest) returns (SendNotificationResponse);
}


message SendNotificationRequest {
  string roomId = 1;
  string userId = 2;
  string message = 3;
}

message SendNotificationResponse {
  int32 status = 1;
}

message NotificationRequest {
  string roomId = 1;
  string userId = 2;
  string message = 3;
}

message NotificationResponse {
  string roomId = 1;
  string userId = 2;
  string message = 3;
  string timestamp = 4;
}
